CSS/characterStyles.css
.characterInfo{
	background-color: #DAAC5E;
	height:218px;
	width:631px;
	left:0px;
	top:20px;
	position: absolute;
	font-family: "Verdana";
	box-shadow: 1px 1px 10px black;
}

.dragBar{
	width:100%;
	height:20px;
	left:0px;
	top:-20px;
}

.dragBar:hover{
	cursor:move;
}

.dragBarButton{
	width:16px;
	height:16px;
	top: -18px;
}

.weaponRankLtrPos{
	position: absolute;
	left: 20px;
	bottom: 3px;
}

.weaponRankBar{
	position: absolute;
	height: 3px;
	left: 0px;
	bottom: -3px;
	background-color:red;
}

.weaponRankBackground{
	position: absolute;
	width: 30px;
	height: 3px;
	left: 0px;
	bottom: -3px;
	background-color:#944F24;
}

.indentedStatLabel{
	position: absolute;
	font-size:10px;
	left:12px;
	top:3px;
}

.indentedStat{
	position: absolute;
	font-size:14px;
	left:40px;
	top:0px;
}

.largeIndentedStat{
	position: absolute;
	font-size: 14px;
	left:65px;
	top:1px;
}

.indentedWeaponName{
	position: absolute;
	left:31px;
	top:4px;
}

.indentedWeaponIcon{
	position: absolute;
	left:10px;
	top:6px;
	height:16px;
	width:16px;
	display:inline-block;
}

.weaponEffectIcons{
	position: absolute;
	left:130px;
	top:4px;
	width:95px;
	display:inline-block;
	text-align:right;
}

.indentedClassName{
	position: absolute;
	left:10px;
	top:5px;
}

.indentedExpMovLabel{
	position: absolute;
	font-size:12px;
	left:20px;
	top:4px;
}

.indentedExpMovText{
	position: absolute;
	font-size:14px;
	left:55px;
	top:2px;
}

.HPText{
	font-size:12px;
	position: absolute;
	left:15px;
	top:15px;
}

.currHPText{
	font-size:30px;
	position: absolute;
	left:50px;
	top:5px;
}

.totalHPText{
	font-size:20px;
	position: absolute;
	left:100px;
	top:10px;
}

.personalSkillHeader{
	top:20px;
}

.personalSkillBody{
	top:40px;
}

.debuffBody{
	top:54px;
}

.weaponBuffBody{
	top:67px;
}

.pairUpBody{
	top:80px;
}

.skillGemPos{
	width:16px;
	top: 214px;
	height:16px;
}

.skillGemInfoPos{
	overflow-y: hidden;
	width:250px;
	top:59px;
	height:150px;
}

.statsPos{
	width:75px;
	height:18px;
}

.statInfoPos{
	width:250px;
	left:340px;
	height:105px;
}

.atkHitPos{
	width:130px;
	left:241px;
	height:20px;
}

.critAvoPos{
	width:120px;
	left:356px;
	height:20px;
}

.movExpPos{
	width:85px;
	left:391px;
	height:20px;
}

.HpPos{
	width:165px;
	left:10px;
	top:90px;
	height:55px;
}

.classLvlPos{
	top:55px;
	height:30px;
}

.shieldsPos{
	width:90px;
	left:80px;
	top:185px;
	height:18px;
}

.pairUpIcoPos{
	width:16px;
	left:580px;
	top:190px;
	height:16px;
}

.pairUpInfoPos{
	width:130px;
	left:445px;
	top:53px;
	height:160px;
}

.weaponRankPos{
	width:35px;
	top:158px;
	height:24px;
}

.itemsPos{
	width:231px;
	left:5px;
	height:25px;
}

.itemInfoPos{
	font-size:12px;
	width:240px;
	left:240px;
	height:150px;
}

.charNamePos{
	font-size:25px;
	width:230px;
	left:10px;
	top:10px;
	height:40px;
}

.pairUpIcon{
	position: absolute;
	width: 10px;
	height: 11px;
	left: 1px;
	bottom: 8px;
}

.weaknessesPos{
	top: 195px;
	left: 403px;
	width: 72px;
	height: 40px;
}

